--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,30 @@
-baseURL = "http://example.org/"
+baseURL = "https://davisvansant.github.io"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "davisvansant.github.io"
+theme = "hugo-coder"
+
+canonifyurls = true
+
+pygmentsstyle = "b2"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+[params]
+    author = "Davis Van Sant"
+    description = "davisvansant.github.io"
+    avatarurl = "myAvatar.svg"
+
+    hideCredits = true
+    hideCopyright = true
+    colorscheme = "dark"
+
+[[params.social]]
+    name = "Github"
+    icon = "fab fa-github-square"
+    weight = 1
+    url = "https://github.com/davisvansant/"
+[[params.social]]
+    name = "Twitter"
+    icon = "fab fa-twitter-square"
+    weight = 2
+    url = "https://twitter.com/davisvansant/"
